tests/spec/fail/map_delete_wrong_arity.aja
m = {"a": 1}
m.delete()
